--- a/.gitmodules
+++ b/.gitmodules
@@ -1,17 +1,17 @@
-[submodule "vim/bundle/vim-fugitive"]
-	path = vim/bundle/vim-fugitive
+[submodule "vim/bundle/fugitive"]
+	path = vim/bundle/fugitive
 	url = git://github.com/tpope/vim-fugitive.git
-[submodule "vim/bundle/vim-colors-solarized"]
-	path = vim/bundle/vim-colors-solarized
+[submodule "vim/bundle/colors-solarized"]
+	path = vim/bundle/colors-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
-[submodule "vim/bundle/vim-rails"]
-	path = vim/bundle/vim-rails
+[submodule "vim/bundle/rails"]
+	path = vim/bundle/rails
 	url = git://github.com/tpope/vim-rails.git
-[submodule "vim/bundle/vim-haml"]
-	path = vim/bundle/vim-haml
+[submodule "vim/bundle/haml"]
+	path = vim/bundle/haml
 	url = git://github.com/tpope/vim-haml.git
-[submodule "vim/bundle/rooter.vim"]
-	path = vim/bundle/rooter.vim
+[submodule "vim/bundle/rooter"]
+	path = vim/bundle/rooter
 	url = git://github.com/airblade/vim-rooter.git
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
@@ -19,3 +19,6 @@
 [submodule "vim/bundle/command-t"]
 	path = vim/bundle/command-t
 	url = git://github.com/wincent/Command-T.git
+[submodule "vim/bundle/dirdiff"]
+	path = vim/bundle/dirdiff
+	url = git://github.com/vim-scripts/DirDiff.vim.git
