--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "vim/bundle/ack"]
 	path = vim/bundle/ack
 	url = git://github.com/mileszs/ack.vim.git
+[submodule "vim/bundle/simplefold"]
+	path = vim/bundle/simplefold
+	url = git://github.com/pangloss/vim-simplefold.git
