--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "vim/bundle/dbext"]
 	path = vim/bundle/dbext
 	url = https://github.com/vim-scripts/dbext.vim.git
+[submodule "vim/project"]
+	path = vim/project
+	url = https://github.com/shemerey/vim-project.git
