--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
+[submodule "vim/bundle/markdown-preview"]
+	path = vim/bundle/markdown-preview
+	url = https://github.com/mkitt/markdown-preview.vim.git
