--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim/bundle/markdown-preview"]
 	path = vim/bundle/markdown-preview
 	url = https://github.com/mkitt/markdown-preview.vim.git
+[submodule "vim/bundle/hammer"]
+	path = vim/bundle/hammer
+	url = https://github.com/matthias-guenther/hammer.vim.git
