--- a/.gitmodules
+++ b/.gitmodules
@@ -55,9 +55,6 @@
 [submodule "vim/bundle/tcomment"]
 	path = vim/bundle/tcomment
 	url = https://github.com/tomtom/tcomment_vim.git
-[submodule "vim/bundle/delimitMate"]
-	path = vim/bundle/delimitMate
-	url = https://github.com/Raimondi/delimitMate.git
 [submodule "vim/bundle/dbext"]
 	path = vim/bundle/dbext
 	url = https://github.com/vim-scripts/dbext.vim.git
@@ -73,3 +70,6 @@
 [submodule "vim/bundle/hammer"]
 	path = vim/bundle/hammer
 	url = https://github.com/matthias-guenther/hammer.vim.git
+[submodule "vim/bundle/smartinput"]
+	path = vim/bundle/smartinput
+	url = https://github.com/kana/vim-smartinput.git
