--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,21 @@
 [submodule "vim/bundle/rake"]
 	path = vim/bundle/rake
 	url = https://github.com/tpope/vim-rake.git
+[submodule "vim/bundle/textobj-lastpat"]
+	path = vim/bundle/textobj-lastpat
+	url = https://github.com/kana/vim-textobj-lastpat.git
+[submodule "vim/bundle/textobj-user"]
+	path = vim/bundle/textobj-user
+	url = https://github.com/kana/vim-textobj-user.git
+[submodule "vim/bundle/textobj-indent"]
+	path = vim/bundle/textobj-indent
+	url = https://github.com/kana/vim-textobj-indent.git
+[submodule "vim/bundle/textobj-syntax"]
+	path = vim/bundle/textobj-syntax
+	url = https://github.com/kana/vim-textobj-syntax.git
+[submodule "vim/bundle/textobj-line"]
+	path = vim/bundle/textobj-line
+	url = https://github.com/kana/vim-textobj-line.git
+[submodule "vim/bundle/textobj-entire"]
+	path = vim/bundle/textobj-entire
+	url = https://github.com/kana/vim-textobj-entire.git
