--- a/.gitmodules
+++ b/.gitmodules
@@ -100,3 +100,6 @@
 [submodule "vim/bundle/textobj-entire"]
 	path = vim/bundle/textobj-entire
 	url = https://github.com/kana/vim-textobj-entire.git
+[submodule "vim/bundle/visual-star-search"]
+	path = vim/bundle/visual-star-search
+	url = https://github.com/nelstrom/vim-visual-star-search.git
