Use Nodelint for JavaScript files

--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "vim/bundle/tagbar"]
 	path = vim/bundle/tagbar
 	url = https://github.com/majutsushi/tagbar.git
+[submodule "vim/bundle/nodelint"]
+	path = vim/bundle/nodelint
+	url = https://github.com/bigfish/vim-nodelint.git
