--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,9 @@
 [submodule "vim/bundle/processing"]
 	path = vim/bundle/processing
 	url = https://github.com/sophacles/vim-processing.git
+[submodule "vim/bundle/javacomplete"]
+	path = vim/bundle/javacomplete
+	url = https://github.com/vim-scripts/javacomplete.git
+[submodule "vim/bundle/jcommenter"]
+	path = vim/bundle/jcommenter
+	url = https://github.com/vim-scripts/jcommenter.vim.git
