--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,6 @@
 [submodule "vim/bundle/javacomplete"]
 	path = vim/bundle/javacomplete
 	url = https://github.com/vim-scripts/javacomplete.git
+[submodule "vim/bundle/CamelCaseMotion"]
+	path = vim/bundle/CamelCaseMotion
+	url = https://github.com/bkad/CamelCaseMotion.git
