--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "vim/bundle/CamelCaseMotion"]
 	path = vim/bundle/CamelCaseMotion
 	url = https://github.com/bkad/CamelCaseMotion.git
+[submodule "vim/bundle/ruby-minitest"]
+	path = vim/bundle/ruby-minitest
+	url = https://github.com/sunaku/vim-ruby-minitest.git
