Made Pathogen a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@
 [submodule "vim/bundle/markdown-folding"]
 	path = vim/bundle/markdown-folding
 	url = https://github.com/nelstrom/vim-markdown-folding.git
+[submodule "vim/bundle/pathogen"]
+	path = vim/bundle/pathogen
+	url = https://github.com/tpope/vim-pathogen.git
