--- a/.gitmodules
+++ b/.gitmodules
@@ -133,3 +133,9 @@
 [submodule "vim/bundle/pathogen"]
 	path = vim/bundle/pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "vim/bundle/dwm"]
+	path = vim/bundle/dwm
+	url = https://github.com/spolu/dwm.vim.git
+[submodule "vim/bundle/zoomwin"]
+	path = vim/bundle/zoomwin
+	url = https://github.com/vim-scripts/ZoomWin.git
