--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "vim/bundle/camel_case_motion"]
 	path = vim/bundle/camel_case_motion
 	url = https://github.com/bkad/CamelCaseMotion.git
+[submodule "vim/bundle/aftercolors"]
+	path = vim/bundle/aftercolors
+	url = https://github.com/calvinchengx/vim-aftercolors.git
