--- a/.gitmodules
+++ b/.gitmodules
@@ -100,3 +100,6 @@
 [submodule "vim/bundle/vim-textobj-entire"]
 	path = vim/bundle/vim-textobj-entire
 	url = https://github.com/kana/vim-textobj-entire.git
+[submodule "vim/bundle/slim"]
+	path = vim/bundle/slim
+	url = https://github.com/slim-template/vim-slim.git
