--- a/.gitmodules
+++ b/.gitmodules
@@ -103,3 +103,6 @@
 [submodule "vim/bundle/slim"]
 	path = vim/bundle/slim
 	url = https://github.com/slim-template/vim-slim.git
+[submodule "vim/bundle/undoquit"]
+	path = vim/bundle/undoquit
+	url = https://github.com/AndrewRadev/undoquit.vim.git
