--- a/.gitmodules
+++ b/.gitmodules
@@ -109,3 +109,6 @@
 [submodule "vim/bundle/advanced-diff-options"]
 	path = vim/bundle/advanced-diff-options
 	url = https://github.com/vim-scripts/AdvancedDiffOptions.git
+[submodule "vim/bundle/jade"]
+	path = vim/bundle/jade
+	url = https://github.com/digitaltoad/vim-jade.git
