--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,6 @@
 [submodule "vim/bundle/less"]
 	path = vim/bundle/less
 	url = https://github.com/groenewege/vim-less.git
+[submodule "vim/bundle/smartgf"]
+	path = vim/bundle/smartgf
+	url = https://github.com/gorkunov/smartgf.vim.git
