--- a/.gitmodules
+++ b/.gitmodules
@@ -133,3 +133,6 @@
 [submodule "vim/bundle/angular-vim-snippets"]
 	path = vim/bundle/angular-vim-snippets
 	url = https://github.com/matthewsimo/angular-vim-snippets.git
+[submodule "vim/bundle/local-vimrc"]
+	path = vim/bundle/local-vimrc
+	url = https://github.com/MarcWeber/vim-addon-local-vimrc.git
