--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,6 @@
 [submodule "vim/bundle/fugitive"]
 	path = vim/bundle/fugitive
 	url = https://github.com/tpope/vim-fugitive.git
-[submodule "vim/bundle/ctrlp"]
-	path = vim/bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim.git
 [submodule "vim/bundle/surround"]
 	path = vim/bundle/surround
 	url = https://github.com/tpope/vim-surround.git
@@ -49,9 +46,6 @@
 [submodule "vim/bundle/projectionist"]
 	path = vim/bundle/projectionist
 	url = https://github.com/tpope/vim-projectionist.git
-[submodule "vim/bundle/vinegar"]
-	path = vim/bundle/vinegar
-	url = https://github.com/tpope/vim-vinegar.git
 [submodule "vim/bundle/delete-trailing-whitespace"]
 	path = vim/bundle/delete-trailing-whitespace
 	url = https://github.com/vim-scripts/DeleteTrailingWhitespace.git
@@ -136,9 +130,6 @@
 [submodule "vim/bundle/switch"]
 	path = vim/bundle/switch
 	url = https://github.com/AndrewRadev/switch.vim.git
-[submodule "vim/bundle/leiningen"]
-	path = vim/bundle/leiningen
-	url = https://github.com/tpope/vim-leiningen.git
 [submodule "vim/bundle/dispatch"]
 	path = vim/bundle/dispatch
 	url = https://github.com/tpope/vim-dispatch
@@ -160,3 +151,21 @@
 [submodule "vim/bundle/salve"]
 	path = vim/bundle/salve
 	url = https://github.com/tpope/vim-salve.git
+[submodule "vim/bundle/unite"]
+	path = vim/bundle/unite
+	url = https://github.com/Shougo/unite.vim.git
+[submodule "vim/bundle/neomru"]
+	path = vim/bundle/neomru
+	url = https://github.com/Shougo/neomru.vim.git
+[submodule "vim/bundle/unite-tag"]
+	path = vim/bundle/unite-tag
+	url = https://github.com/tsukkee/unite-tag.git
+[submodule "vim/bundle/unite-history"]
+	path = vim/bundle/unite-history
+	url = https://github.com/thinca/vim-unite-history
+[submodule "vim/bundle/unite-mark"]
+	path = vim/bundle/unite-mark
+	url = https://github.com/tacroe/unite-mark
+[submodule "vim/bundle/vimproc"]
+	path = vim/bundle/vimproc
+	url = https://github.com/Shougo/vimproc.vim.git
