--- a/.gitmodules
+++ b/.gitmodules
@@ -83,16 +83,16 @@
 	path = vim/bundle/delimitmate
 	url = git@github.com:Raimondi/delimitMate.git
 [submodule "vim/bundle/vim-textobj-user"]
-	path = vim/bundle/vim-textobj-user
+	path = vim/bundle/textobj-user
 	url = https://github.com/kana/vim-textobj-user.git
 [submodule "vim/bundle/vim-textobj-rubyblock"]
-	path = vim/bundle/vim-textobj-rubyblock
+	path = vim/bundle/textobj-rubyblock
 	url = https://github.com/nelstrom/vim-textobj-rubyblock.git
 [submodule "vim/bundle/vim-textobj-line"]
-	path = vim/bundle/vim-textobj-line
+	path = vim/bundle/textobj-line
 	url = https://github.com/kana/vim-textobj-line.git
 [submodule "vim/bundle/vim-textobj-entire"]
-	path = vim/bundle/vim-textobj-entire
+	path = vim/bundle/textobj-entire
 	url = https://github.com/kana/vim-textobj-entire.git
 [submodule "vim/bundle/slim"]
 	path = vim/bundle/slim
@@ -182,7 +182,7 @@
 	path = vim/bundle/slime
 	url = https://github.com/jpalardy/vim-slime.git
 [submodule "vim/bundle/vim-clojure-static"]
-	path = vim/bundle/vim-clojure-static
+	path = vim/bundle/clojure-static
 	url = https://github.com/guns/vim-clojure-static.git
 [submodule "vim/bundle/rainbow"]
 	path = vim/bundle/rainbow
