--- a/.gitmodules
+++ b/.gitmodules
@@ -190,3 +190,6 @@
 [submodule "vim/bundle/clojure-highlight"]
 	path = vim/bundle/clojure-highlight
 	url = https://github.com/guns/vim-clojure-highlight.git
+[submodule "vim/bundle/undotree"]
+	path = vim/bundle/undotree
+	url = https://github.com/mbbill/undotree.git
