[tmux] Customize bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,3 +6,34 @@ unbind C-b
 
 set -g base-index 1
 setw -g pane-base-index 1
+
+set -g mode-mouse on
+set -g mouse-select-window on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/tmux.conf"
+bind e new-window -n config "vim ~/.tmux.conf"
+
+bind y copy-mode
+bind p paste-buffer
+
+unbind s
+bind S choose-tree
+bind s split-window -v
+bind v split-window -h
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind -r H resize-pane -L
+bind -r J resize-pane -D
+bind -r K resize-pane -U
+bind -r L resize-pane -R
+
+bind -r C-h resize-pane -L 5
+bind -r C-j resize-pane -D 5
+bind -r C-k resize-pane -U 5
+bind -r C-l resize-pane -R 5
