--- a/tmux.conf
+++ b/tmux.conf
@@ -7,10 +7,7 @@ unbind C-b
 set -g base-index 1
 setw -g pane-base-index 1
 
-set -g mode-mouse on
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+set -g mouse on
 
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/tmux.conf"
 bind e new-window -n config "vim ~/.tmux.conf"
