[vim] Fix mouse reporting inside tmux sessions

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,9 @@ unbind C-b
 set -g base-index 1
 setw -g pane-base-index 1
 
-set -g mouse on
+set -g mouse off
+bind m set -g mouse on
+bind M set -g mouse off
 
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/tmux.conf"
 bind e new-window -n config "vim ~/.tmux.conf"
