--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,8 @@ unbind C-b
 set -g base-index 1
 setw -g pane-base-index 1
 
+set -g default-terminal "screen-256color"
+
 set -g mouse off
 bind m set -g mouse on
 bind M set -g mouse off
