[zsh] Improve toggle of dark/light mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 set -g default-terminal "screen-256color"
+set -ga update-environment ' ITERM_PROFILE ZSH ZSH_CUSTOM ZSH_THEME'
 
 set -g mouse off
 bind m set -g mouse on
