--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,15 @@ setw -g pane-base-index 1
 set -g default-terminal "screen-256color"
 set -ga update-environment ' ITERM_PROFILE ZSH ZSH_CUSTOM ZSH_THEME'
 
+set -g status-style bg=colour66,fg=colour234
+set -g message-style bg=colour23,fg=colour230
+set -g message-command-style bg=colour66,fg=colour234
+set -g mode-style bg=colour23,fg=colour230
+set -g window-status-style fg=colour237
+set -g window-status-current-style fg=colour230
+set -g pane-border-style fg=colour66
+set -g pane-active-border-style fg=colour23
+
 set -g mouse off
 bind m set -g mouse on
 bind M set -g mouse off
