[tmux] Clean up status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,9 @@ set -g window-status-current-style fg=colour230
 set -g pane-border-style fg=colour66
 set -g pane-active-border-style fg=colour23
 
+set -g status-interval 5
+set -g status-right "%H:%M #H"
+
 set -g mouse off
 bind m set -g mouse on
 bind M set -g mouse off
