[tmux] Open panes and windows in current directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,10 +32,12 @@ bind e new-window -n config "vim ~/.tmux.conf"
 bind y copy-mode
 bind p paste-buffer
 
-unbind s
 bind S choose-tree
-bind s split-window -v
-bind v split-window -h
+unbind s
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+unbind c
+bind c new-window -c "#{pane_current_path}"
 
 bind h select-pane -L
 bind j select-pane -D
