--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,13 @@ bind r source-file ~/.tmux.conf \; display "Reloaded ~/tmux.conf"
 bind e new-window -n config "vim ~/.tmux.conf"
 
 bind y copy-mode
+bind Y capture-pane
+unbind p
 bind p paste-buffer
+bind P choose-buffer
+bind Escape copy-mode
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
 
 bind S choose-tree
 unbind s
@@ -38,6 +44,7 @@ bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 unbind c
 bind c new-window -c "#{pane_current_path}"
+bind N previous-window
 
 bind h select-pane -L
 bind j select-pane -D
