[tmux] Display battery status in status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,6 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 set -g default-terminal "screen-256color"
-set -ga update-environment ' ITERM_PROFILE ZSH ZSH_CUSTOM ZSH_THEME'
 
 set -g status-style bg=colour66,fg=colour234
 set -g message-style bg=colour23,fg=colour230
@@ -19,8 +18,9 @@ set -g window-status-current-style fg=colour230
 set -g pane-border-style fg=colour66
 set -g pane-active-border-style fg=colour23
 
-set -g status-interval 5
-set -g status-right "%H:%M #H"
+set -g status-left-length 20
+set -g status-left "[#S] "
+set -g status-right "#(zsh -c 'source ~/.oh-my-zsh-custom/battery.zsh; battery_status') %H:%M #H"
 
 set -g mouse off
 bind m set -g mouse on
