[tmux] Enhance pane related bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,12 +51,15 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind -r H resize-pane -L
-bind -r J resize-pane -D
-bind -r K resize-pane -U
-bind -r L resize-pane -R
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
-bind -r C-h resize-pane -L 5
-bind -r C-j resize-pane -D 5
-bind -r C-k resize-pane -U 5
-bind -r C-l resize-pane -R 5
+bind -r C-h resize-pane -L
+bind -r C-j resize-pane -D
+bind -r C-k resize-pane -U
+bind -r C-l resize-pane -R
+
+bind < swap-pane -U
+bind > swap-pane -D
