--- a/.gitmodules
+++ b/.gitmodules
@@ -205,3 +205,6 @@
 [submodule "vim/bundle/tmux"]
 	path = vim/bundle/tmux
 	url = https://github.com/tmux-plugins/vim-tmux.git
+[submodule "vim/bundle/liquid"]
+	path = vim/bundle/liquid
+	url = https://github.com/tpope/vim-liquid.git
