[tmux] Binding for clearing pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -63,3 +63,6 @@ bind -r C-l resize-pane -R
 
 bind < swap-pane -U
 bind > swap-pane -D
+
+# clear screen
+bind -n C-k send-keys -R \; send-keys C-l \; clear-history
