[tmux] Move current pane to another window

--- a/tmux.conf
+++ b/tmux.conf
@@ -59,5 +59,8 @@ bind -r L resize-pane -R
 bind < swap-pane -U
 bind > swap-pane -D
 
+bind w command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind W command-prompt -p "send pane to:"    "join-pane -t '%%'"
+
 # clear screen
 bind C-k send-keys -R \; send-keys C-l \; clear-history
