--- a/.gitmodules
+++ b/.gitmodules
@@ -109,9 +109,6 @@
 [submodule "vim/bundle/local-vimrc"]
 	path = vim/bundle/default/local-vimrc
 	url = https://github.com/MarcWeber/vim-addon-local-vimrc.git
-[submodule "vim/bundle/syntastic"]
-	path = vim/bundle/default/syntastic
-	url = https://github.com/scrooloose/syntastic.git
 [submodule "vim/bundle/indentline"]
 	path = vim/bundle/default/indentline
 	url = https://github.com/Yggdroot/indentLine.git
@@ -223,3 +220,6 @@
 [submodule "vim/bundle/default/neoyank"]
 	path = vim/bundle/default/neoyank
 	url = https://github.com/Shougo/neoyank.vim.git
+[submodule "vim/bundle/neomake"]
+	path = vim/bundle/default/neomake
+	url = https://github.com/benekastah/neomake.git
