--- a/boot/boot.properties
+++ b/boot/boot.properties
@@ -1,6 +1,6 @@
 #http://boot-clj.com
-#Wed Feb 17 17:17:40 CET 2016
+#Mon Jun 13 09:49:20 CEST 2016
 BOOT_JVM_OPTIONS=-client -XX\:+TieredCompilation -XX\:TieredStopAtLevel\=1 -Xmx2g -XX\:+UseConcMarkSweepGC -XX\:+CMSClassUnloadingEnabled -Xverify\:none
 BOOT_CLOJURE_NAME=org.clojure/clojure
+BOOT_VERSION=2.6.0
 BOOT_CLOJURE_VERSION=1.8.0
-BOOT_VERSION=2.5.5
