--- a/boot/boot.properties
+++ b/boot/boot.properties
@@ -1,5 +1,7 @@
-BOOT_JVM_OPTIONS=-client -XX\:+TieredCompilation -XX\:TieredStopAtLevel\=1 -Xmx2g -XX\:+UseConcMarkSweepGC -XX\:+CMSClassUnloadingEnabled -Xverify\:none
+#http://boot-clj.com
+#Sat Oct 01 10:50:50 CEST 2016
 BOOT_EMIT_TARGET=no
+BOOT_JVM_OPTIONS=-client -XX\:+TieredCompilation -XX\:TieredStopAtLevel\=1 -Xmx2g -XX\:+UseConcMarkSweepGC -XX\:+CMSClassUnloadingEnabled -Xverify\:none
 BOOT_CLOJURE_NAME=org.clojure/clojure
-BOOT_VERSION=2.6.0
 BOOT_CLOJURE_VERSION=1.8.0
+BOOT_VERSION=2.6.0
