[tmux] Fix clipboard on OS X Sierra

--- a/tmux.conf
+++ b/tmux.conf
@@ -64,3 +64,7 @@ bind W command-prompt -p "send pane to:"    "join-pane -t '%%'"
 
 # clear screen
 bind C-k send-keys -R \; send-keys C-l \; clear-history
+
+# Fix pasteboard
+if-shell 'command -v reattach-to-user-namespace >/dev/null 2>&1' \
+  'set-option -g default-command "reattach-to-user-namespace -l zsh"'
