--- a/tmux.conf
+++ b/tmux.conf
@@ -62,6 +62,8 @@ bind > swap-pane -D
 bind w command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind W command-prompt -p "send pane to:"    "join-pane -t '%%'"
 
+set-option -ga update-environment ' ITERM_PROFILE'
+
 # clear screen
 bind C-k send-keys -R \; send-keys C-l \; clear-history
 
