--- a/tmux.conf
+++ b/tmux.conf
@@ -22,9 +22,12 @@ set -g status-left-length 20
 set -g status-left "[#S] "
 set -g status-right "#(zsh -c 'source ~/.oh-my-zsh-custom/battery.zsh; battery_status') %H:%M #H"
 
+set -g focus-events on
+
 set -g mouse on
 bind M set -g mouse off
 bind m set -g mouse on
+
 
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/tmux.conf"
 bind e new-window -n config "vim ~/.tmux.conf"
